remove: templates with templ and htmx handlers
Remove templates/render handlers
Remove templ from project
Remove if statement for htmx requests on handlers
