# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api/v1
 definitions:
+  episode.ChangeEpisodeTrackingRequest:
+    properties:
+      episode_id:
+        type: integer
+      tracking:
+        type: string
+    type: object
   schema.AddNewTorrentRequest:
     properties:
       magneticUrl:
@@ -310,6 +317,61 @@ paths:
       summary: Add Show
       tags:
       - Database/Show
+  /database/show/{id}:
+    get:
+      description: Getshow
+      parameters:
+      - description: Show ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemas.DefaultResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schemas.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schemas.ErrorResponse'
+      summary: Get Show
+      tags:
+      - Database/Show
+  /database/show/episode/status:
+    post:
+      description: Change Episode Tracking Status
+      parameters:
+      - description: Request Body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/episode.ChangeEpisodeTrackingRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemas.DefaultResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/schemas.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/schemas.ErrorResponse'
+      summary: Change Episode Status
+      tags:
+      - Database/Show/Episode
   /prowlarr/indexer:
     get:
       consumes:
